# NaiveJS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  launch.sh
.github/workflows/: tag-push-test.yml
njs/: global_var.cpp  global_var.h  main.cpp
njs/basic_types/: GlobalObject.cpp  GlobalObject.h  HeapArray.h  JSArray.cpp  JSArray.h  JSArrayIterator.h  JSArrayPrototype.cpp  JSArrayPrototype.h  JSBoolean.h  JSBooleanPrototype.h  JSBoundFunction.cpp  JSBoundFunction.h  JSDate.h  JSDatePrototype.h  JSErrorPrototype.cpp  JSErrorPrototype.h  JSForInIterator.h  JSFunction.cpp  JSFunction.h  JSFunctionMeta.h  JSFunctionPrototype.cpp  JSFunctionPrototype.h  JSGenerator.h  JSGeneratorPrototype.h  JSHeapValue.h  JSIteratorPrototype.h  JSNumber.h  JSNumberPrototype.h  JSObject.cpp  JSObject.h  JSObjectKey.h  JSObjectPrototype.cpp  JSObjectPrototype.h  JSPromise.h  JSPromisePrototype.h  JSRegExp.h  JSRegExpPrototype.h  JSString.h  JSStringPrototype.h  JSSymbol.h  (+17 more)
njs/codegen/: CatchEntry.h  CatchTableEntry.h  CodegenVisitor.h  Scope.cpp  Scope.h  SymbolRecord.h  SymbolTable.h
njs/common/: ArrayRef.h  AtomPool.h  CommonTypes.h  Completion.h  Defer.h  JSErrorType.h  Span.h  StringPool.cpp  StringPool.h  common_def.h  common_types.h  conversion_helper.h  double_to_str.h  enum_strings.cpp  enum_strings.h  enums.cpp  enums.h
njs/gc/: GCHeap.cpp  GCHeap.h  GCObject.cpp  GCObject.h
njs/include/: MurmurHash3.h  SmallVector.h
njs/include/libregexp/: CMakeLists.txt  lre_helper.h
njs/parser/: Lexer.h  Parser.h  StringPool.cpp  StringPool.h  Token.h  ast.cpp  ast.h  character.h  enum_strings.cpp  enum_strings.h  lexer.h  lexing_helper.h  parser.h  token.cpp  token.h  token_type.h  unicode.h
njs/utils/: Timer.cpp  Timer.h  common_types.h  helper.cpp  helper.h  lexing_helper.cpp  lexing_helper.h  macros.h
njs/vm/: BasicConstructor.cpp  BasicCtors.cpp  Completion.h  ErrorOr.h  Instruction.cpp  Instruction.h  Instructions.cpp  Instructions.h  JSONParser.h  JSRunLoop.cpp  JSRunLoop.h  JSStackFrame.h  NativeFunction.cpp  NativeFunction.h  NjsVM.cpp  NjsVM.h  NjsVM_setup.cpp  Runtime.h  basic_constructor.cpp  native.cpp  native.h  object_static_method.cpp  object_static_method.h  opcode.h
test_files/: test_Iterator.js  test_array.js  test_array_exotic.js  test_bitwise.js  test_bool_expr.js  test_closure.js  test_deep_object.js  test_defineProperty.js  test_fibonacci.js  test_for_in.js  test_for_of.js  test_hashtable.js  test_if_stmt.js  test_indexOf.js  test_label.js  test_number_lit.js  test_object.js  test_promise.js  test_quicksort.js  test_regexp.js  test_script.py  test_string_lit.js  test_switch.js  test_this_binding.js  test_timer.js  test_try_catch.js  test_typescript.js  test_typescript2_0_0.js  test_typescript_mod.js  test_typescript_mod1.js  test_var.js
test_files/from_quickjs/: test_builtin.js  test_closure.js  test_language.js  test_loop.js
